syntax = "proto3";

import "common_types.proto";

option java_multiple_files = true;
option java_package = "com.example.types";
option java_outer_classname = "OrderTypesProto";

message ManageGoodInfo{
  int64 userId = 1;
  int64 goodId = 2;
}

message ManageGoodInfoList{
  repeated ManageGoodInfo infos = 1;
}

message GoodAmountInfo{
  int64 userId = 1;
  int64 goodId = 2;
  int32 amount = 3;
}

message GoodAmountInfoList{
  repeated GoodAmountInfo infos = 1;
}

message OrderStatus{
  int64 id = 1;
  int32 status = 2;
}

message Order{
  int64 id = 1;
  int32 order_status = 2;
  double price = 3;
  repeated OrderGood goods = 4;
}

message OrderList{
  repeated Order orders = 1;
}

message OrderAndUser{
  int64 id = 1;
  int32 order_status = 2;
  double price = 3;
  int64 user_id = 4;
  repeated OrderGood goods = 5;
}

message OrderAndUserList{
  repeated OrderAndUser orders = 1;
}

message StatusWindow{
  int32 order_status_min = 1;
  int32 order_status_max = 2;
}

message CreateOrderInfo{
  int64 userId = 1;
  bool buyMax = 2;
}

message OrderGood{
  Good good = 1;
  double price = 2;
  int32 amount = 3;
}

message CartGood{
  Good good = 1;
  int32 amount = 2;
}

message CartGoodList{
  repeated CartGood goods = 1;
}